--- a/Web3.0_虛擬交易平台/README
+++ b/Web3.0_虛擬交易平台/README
@@ -1,4 +1,4 @@
-專題名稱：建立與在區塊鏈(Blockcahin)的幣圈
+專題名稱：Web3.0_虛擬交易平台
 組員：資工三B 410919132 林映如 資工三B 410919158 楊廷烽 資工三B 410918819 蔡侄宇 資工三B 410928149 謝孟峻
 指導老師姓名：謝孟諺老師
 會議記錄：111(1)會議記錄1、111(1)會議記錄2
