--- a/AI深度學習應用之影像辨識/README
+++ b/AI深度學習應用之影像辨識/README
@@ -1,7 +1,7 @@
 A 專題名稱：AI深度學習應用之影像辨識
-B 組員：資工三B 410908903 葉睿廷、資工三B 410918990 劉釉喬、資工三B 
+B 組員：資工三B 410908903 葉睿廷、資工三B 410918990 劉釉喬、資工三B 410919035 莊育慈
 C 指導老師姓名：翁永昌
-D 會議記錄：第一次會議記錄、第二次會議紀錄
+D 會議記錄：第一次會議記錄.docx、第二次會議紀錄.docx
 E 畢業專題計畫書：
 F 成果報告書：
 G 程式：
