--- a/應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用/README
+++ b/應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用/README
@@ -1,10 +1,10 @@
-專題名稱：應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用
-組員：資工三A 410928173 黃凱軒 資工三A 410918908 陳柏諺  資工三A  顏仁炫 410903660 資工三A張瑞蘢  資工三A 陳家禾 410919182
-指導老師姓名：詹毓偉
-會議記錄：輸入兩個會議紀錄電子檔的檔名
-畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
-成果報告書：輸入成果報告書電子檔的檔名
-程式：輸入程式電子檔的檔名
-簡報：輸入介紹專題 PPT 簡報檔的檔名
-海報：輸入海報電子檔的檔名
+A.專題名稱：應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用
+B.組員：資工三A 410928173 黃凱軒 資工三A 410918908 陳柏諺  資工三A  顏仁炫 410903660 資工三A張瑞蘢  資工三A 陳家禾 410919182
+C.指導老師姓名：詹毓偉
+D.會議記錄：輸入兩個會議紀錄電子檔的檔名
+E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
+F.成果報告書：輸入成果報告書電子檔的檔名
+G.程式：輸入程式電子檔的檔名
+H.簡報：輸入介紹專題 PPT 簡報檔的檔名
+I.海報：輸入海報電子檔的檔名
 介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
