--- a/智慧導引推車/README
+++ b/智慧導引推車/README
@@ -5,7 +5,7 @@ B.組員：
 資工三A 410918356 易弘翔
 資工三A 410918453 江俊頡
 C.指導老師姓名：林浩仁老師
-D.兩次會議紀錄：專題會議1,專題會議2
+D.兩次會議紀錄：會議記錄1,會議記錄2
 E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名 
 D.成果報告書：輸入成果報告書電子檔的檔名 
 E.程式：輸入程式電子檔的檔名 
