--- a/FPGA結合智慧製造/README
+++ b/FPGA結合智慧製造/README
@@ -7,7 +7,9 @@ B.組員：
     資工三B 410918380 蒙羿辰
     資工三B 410928246 李以崴
 C.指導老師姓名：林浩仁老師
-D.會議記錄：輸入兩個會議紀錄電子檔的檔名
+D.會議記錄：
+    第一次:111.10.18 會議記錄
+    第二次:111.12.06 會議記錄
 E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
 F.成果報告書：輸入成果報告書電子檔的檔名
 G.程式：輸入程式電子檔的檔名
