--- a/FPGA結合智慧製造/README
+++ b/FPGA結合智慧製造/README
@@ -6,7 +6,7 @@ B.組員：
     資工三B 410919019 何奐文
     資工三B 410918380 蒙羿辰
     資工三B 410928246 李以崴
-C.指導老師姓名：林浩仁老師
+C.指導老師姓名：林浩仁老師、陸子強老師
 D.會議記錄：
     第一次:111.10.18 會議記錄
     第二次:111.12.06 會議記錄
