--- a/應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用/README
+++ b/應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用/README
@@ -1,5 +1,5 @@
 A.專題名稱：應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用
-B.組員：資工三A 410928173 黃凱軒 資工三A 410918908 陳柏諺  資工三A  顏仁炫 410903660 資工三A張瑞蘢  資工三A 陳家禾 410919182
+B.組員：資工三A 410928173 黃凱軒 資工三A 410918908 陳柏諺  資工三A  顏仁炫 410903660 資工三A張瑞蘢 410928270  資工三A 陳家禾 410919182
 C.指導老師姓名：詹毓偉
 D.會議記錄：輸入兩個會議紀錄電子檔的檔名
 E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
