--- a/互動式學習網頁製作/README
+++ b/互動式學習網頁製作/README
@@ -1,6 +1,6 @@
-A.專題名稱：智慧水保全
-B.組員：資工三B林威 410903717 資工三B 林冠煒 410918607 資工三B 謝明志 410919174  資工三B 吳劭揚 410918429
-C.指導老師姓名：戴自強老師 
+A.專題名稱：互動式學習網頁製作
+B.組員：資工3B 葉羽致 資工3B 吳承祐 資工3B 郭正易
+C.指導老師姓名： 滕元翔
 D.兩次會議紀錄：輸入兩個會議紀錄電子檔的檔名 
 E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名 
 D.成果報告書：輸入成果報告書電子檔的檔名
