--- a/互動式學習網頁製作/README
+++ b/互動式學習網頁製作/README
@@ -1,5 +1,5 @@
 A.專題名稱：互動式學習網頁製作
-B.組員：資工3B 葉羽致 資工3B 吳承祐 資工3B 郭正易
+B.組員：資工3B 410918932 葉羽致 資工3B 410928123 吳承祐 資工3B 410918364 郭正易
 C.指導老師姓名： 滕元翔
 D.兩次會議紀錄：輸入兩個會議紀錄電子檔的檔名 
 E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名 
