--- a/程式設計yt教學頻道網頁製作/README
+++ b/程式設計yt教學頻道網頁製作/README
@@ -1,6 +1,6 @@
 專題名稱:程式設計yt教學頻道網頁製作
 組員: 資工三B  候昱翔410918657 李棋榕410918500 宋竑旻410918461
-指導老師:騰元祥
+指導老師:滕元翔
 會議記錄：專題1為第一次會議紀錄   新增專題會議紀錄2
 畢業專題計畫書：
 成果報告書:
