--- a/APCS網頁YT設計/README
+++ b/APCS網頁YT設計/README
@@ -1,7 +1,7 @@
- 專題名稱：
-組員：班級、學號、姓名
-指導老師姓名：
-會議記錄：輸入兩個會議紀錄電子檔的檔名
+專題名稱：APCS網頁YT設計
+組員：資工三B 410918445張振暐、資工三B 410918322黃健豪、資工三A 410928335涂瑜峻
+指導老師姓名：騰元翔老師  
+會議記錄：會議記錄1、會議記錄2
 畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
 成果報告書：輸入成果報告書電子檔的檔名
 程式：輸入程式電子檔的檔名
