--- a/無人車自動煞車/README
+++ b/無人車自動煞車/README
@@ -1,4 +1,4 @@
-專題名稱：無人車自動煞車
+專題名稱：無人車自動煞車系統 
 組員：資工三A 410919001 張譽嚴、資工三A 410918665 陳揆明、資工三A 410954653 房昀楷、資工三A 410918746 卓家銘、資工三A 410918615 黃浩瑜、資工三A 410921927 蔡昀佐
 指導老師姓名：陸子強
 會議記錄：輸入兩個會議紀錄電子檔的檔名
