--- a/基於NERF網路之無人機空拍建模/README
+++ b/基於NERF網路之無人機空拍建模/README
@@ -5,7 +5,7 @@
 (資工三A)(410919108)(陳聿脩)
 指導老師姓名：蔡英德教授
 會議記錄：第一次會議記錄、第二次會議記錄
-畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名  
+畢業專題計畫書：專題計畫書
 成果報告書：輸入成果報告書電子檔的檔名  
 程式：輸入程式電子檔的檔名
 簡報：輸入介紹專題 PPT 簡報檔的檔名  
