--- a/智慧藥盒與用藥提醒/README
+++ b/智慧藥盒與用藥提醒/README
@@ -2,7 +2,7 @@
 組員：資工三B 410954297 宋彥霖、資管三B 411054016 曾子宇、資管三B 410637340 簡志翔、資管三B410903547陳柏瑋
 指導老師姓名：張志宏
 會議記錄：專題會議1、專題會議2
-畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
+畢業專題計畫書：畢業專題計畫書
 成果報告書：輸入成果報告書電子檔的檔名
 程式：輸入程式電子檔的檔名
 簡報：輸入介紹專題 PPT 簡報檔的檔名
