--- a/醫療管理系統/README
+++ b/醫療管理系統/README
@@ -1,4 +1,4 @@
-A.專題名稱：醫療管理系統
+A.專題名稱：智慧健康管理APP
 B.組員：資工三A 詹子葳 410928199、資工三A 林欣妤 410918843、資工三A 盧子若 410918982、資工三B 李玲慧 410918584
 C.指導老師姓名：方百立老師
 D.會議記錄：第一次會議記錄、第二次會議紀錄
