--- a/FPGA結合智慧製造/README
+++ b/FPGA結合智慧製造/README
@@ -10,7 +10,7 @@ C.指導老師姓名：林浩仁老師、陸子強老師
 D.會議記錄：
     第一次:111.10.18 會議記錄
     第二次:111.12.06 會議記錄
-E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
+E.畢業專題計畫書：專題計劃書.pdf
 F.成果報告書：輸入成果報告書電子檔的檔名
 G.程式：輸入程式電子檔的檔名
 H.簡報：輸入介紹專題 PPT 簡報檔的檔名
