--- a/以FPGA做影像辨識硬體加速應用/README
+++ b/以FPGA做影像辨識硬體加速應用/README
@@ -1,4 +1,4 @@
-專題名稱：以FPGA做影像辨識硬體加速應用
+專題名稱：以FPGA做賣場車牌辨識硬體加速應用
 組員：資工三A 410919433 柯立崗 資工三A 410954302 楊濟鴻 資工三A 410903686 林冠宏 資工三A 410918437 李冠霖
 指導老師姓名：林浩仁老師
 會議記錄：會議記錄1、會議記錄2
