--- a/去去中心晃/README
+++ b/去去中心晃/README
@@ -2,7 +2,7 @@
 組員：資工三A 410918801 潘志翔、資工三A 410918924 陳宗震、資工三A 410918495 高執益、資工三A 410918827 張孟軒
 指導老師姓名：謝孟諺老師
 會議記錄：專題會議記錄(一)、專題會議記錄(二)
-畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
+畢業專題計畫書：畢業專題計畫書
 成果報告書：輸入成果報告書電子檔的檔名
 程式：輸入程式電子檔的檔名
 簡報：輸入介紹專題 PPT 簡報檔的檔名
