change folder name

--- a/分佈式網絡及加密貨幣驅動的公共創作平台/README
+++ b/分佈式網絡及加密貨幣驅動的公共創作平台/README
@@ -1,8 +1,8 @@
-專題名稱：Web3.0_虛擬交易平台
+專題名稱：分佈式網絡及加密貨幣驅動的公共創作平台
 組員：資工三B 410919132 林映如 資工三B 410919158 楊廷烽 資工三B 410918819 蔡侄宇 資工三B 410928149 謝孟峻
 指導老師姓名：謝孟諺老師
 會議記錄：111(1)專題會議記錄(一)、111(1)專題會議記錄(二)
-畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名  
+畢業專題計畫書：分佈式網絡及加密貨幣驅動的公共創作平台_畢業專題計劃書.pdf
 成果報告書：輸入成果報告書電子檔的檔名  
 程式：輸入程式電子檔的檔名 P.4  
 簡報：輸入介紹專題 PPT 簡報檔的檔名  
