--- a/網頁教學網/README
+++ b/網頁教學網/README
@@ -1,7 +1,7 @@
  專題名稱：網頁教學網
  組員:資工三B 410918851 郭芃岑   資工三B 410921896 楊舒語    資工三B  410918568 夏湘淳
  指導老師姓名：戴自強
- 會議記錄：meetingMinute-1
+ 會議記錄：meetingMinute-1、meetingMinute-2
  畢業專題計畫書：專題計劃書
  成果報告書：輸入成果報告書電子檔的檔名
  程式：輸入程式電子檔的檔名
