--- a/網頁教學網/README
+++ b/網頁教學網/README
@@ -1,4 +1,4 @@
- 專題名稱：網頁教學網
+ 專題名稱：菜逼逼學前端
  組員:資工三B 410918851 郭芃岑   資工三B 410921896 楊舒語    資工三B  410918568 夏湘淳
  指導老師姓名：戴自強
  會議記錄：meetingMinute-1、meetingMinute-2
