--- a/無人機手勢控制/README
+++ b/無人機手勢控制/README
@@ -1,7 +1,7 @@
 專題名稱：無人機手勢控制
 組員：資工三B 410900612 葉韋辰、資工三B 410907452 李元喬
 指導老師姓名：陸子強 老師
-會議記錄：第一次專題會議記錄、第二次專題會議記錄
+會議記錄：第一次專題會議記錄111.12.29、第二次專題會議記錄112.02.09
 畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
 成果報告書：輸入成果報告書電子檔的檔名
 程式：輸入程式電子檔的檔名
