--- a/Android 番茄鐘管理法App開發/README
+++ b/Android 番茄鐘管理法App開發/README
@@ -4,7 +4,7 @@
 會議記錄：111(1)專題會議記錄.pdf、111(2)專題會議記錄.pdf
 畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
 成果報告書：輸入成果報告書電子檔的檔名https://github.com/410918762/2023
-程式：輸入程式電子檔的檔名
-簡報：輸入介紹專題 PPT 簡報檔的檔名
-海報：輸入海報電子檔的檔名
-介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
+程式：系統相關程式.txt (提供系統相關程式.zip雲端下載網址)
+簡報：介紹專題 PPT 簡報檔
+海報：專題海報檔
+介紹影片：https://youtu.be/hfDGvOqAL0o
