--- a/Android  記帳APP /README
+++ b/Android  記帳APP /README
@@ -5,5 +5,5 @@
 畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
 成果報告書：輸入成果報告書電子檔的檔名
 程式：輸入程式電子檔的檔名
-簡報：輸入介紹專題 PPT 簡報檔的檔名
-海報：輸入海報電子檔的檔名
+簡報：Android記帳APP開發
+海報：Android記帳APP開發poster
