--- a/Android 番茄鐘管理法App開發/README
+++ b/Android 番茄鐘管理法App開發/README
@@ -2,9 +2,9 @@
 組員：資工三A 李紹邦 410918762、資工三A 蔡欣凱 410918720、資工三A 高瑞均 410954310、資工三A 蘇彥誠 410918885
 指導老師姓名：康贊清
 會議記錄：111(1)專題會議記錄.pdf、111(2)專題會議記錄.pdf
-畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
-成果報告書：輸入成果報告書電子檔的檔名https://github.com/410918762/2023
+畢業專題計畫書：專題計劃書.docx
+成果報告書：成果報告書.docx
 程式：系統相關程式.txt (提供系統相關程式.zip雲端下載網址)
-簡報：介紹專題 PPT 簡報檔
-海報：專題海報檔
+簡報：介紹專題PPT簡報檔.pptx
+海報：專題海報檔.jpg
 介紹影片：https://youtu.be/hfDGvOqAL0o
