--- a/醫療管理系統/README
+++ b/醫療管理系統/README
@@ -1,5 +1,5 @@
 A.專題名稱：智慧健康管理APP
-B.組員：資工三A 詹子葳 410928199、資工三A 林欣妤 410918843、資工三A 盧子若 410918982、資工三B 李玲慧 410918584
+B.組員：資工四A 詹子葳 410928199、資工四A 林欣妤 410918843、資工四A 盧子若 410918982、資工四B 李玲慧 410918584
 C.指導老師姓名：方百立老師
 D.會議記錄：第一次會議記錄、第二次會議紀錄
 E.畢業專題計畫書：專題計劃書.pdf
