--- a/Android 番茄鐘管理法App開發/README
+++ b/Android 番茄鐘管理法App開發/README
@@ -1,5 +1,5 @@
 專題名稱：Android 番茄鐘管理法App開發
-組員：資工三A 李紹邦 410918762、資工三A 蔡欣凱 410918720、資工三A 高瑞均 410954310、資工三A 蘇彥誠 410918885
+組員：資工四A 李紹邦 410918762、資工四A 蔡欣凱 410918720、資工三四 高瑞均 410954310、資工四A 蘇彥誠 410918885
 指導老師姓名：康贊清
 會議記錄：111(1)專題會議記錄.pdf、111(2)專題會議記錄.pdf
 畢業專題計畫書：專題計劃書.docx
