--- a/醫療管理系統/README
+++ b/醫療管理系統/README
@@ -6,5 +6,5 @@ E.畢業專題計畫書：專題計劃書.pdf
 F.成果報告書：輸入成果報告書電子檔的檔名
 G.程式：輸入程式電子檔的檔名
 H.簡報：輸入介紹專題 PPT 簡報檔的檔名
-I.海報：輸入海報電子檔的檔名
+I.海報：C23-智慧健康管理APP.jpg
 J.介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
