--- a/醫療管理系統/README
+++ b/醫療管理系統/README
@@ -1,7 +1,7 @@
 A.專題名稱：智慧健康管理APP
 B.組員：資工四A 詹子葳 410928199、資工四A 林欣妤 410918843、資工四A 盧子若 410918982、資工四B 李玲慧 410918584
 C.指導老師姓名：方百立老師
-D.會議記錄：第一次會議記錄、第二次會議紀錄
+D.會議記錄：第一次會議記錄.pdf、第二次會議紀錄.pdf
 E.畢業專題計畫書：專題計劃書.pdf
 F.成果報告書：輸入成果報告書電子檔的檔名
 G.程式：輸入程式電子檔的檔名
