Update and rename README to README

--- a/電動車充電系統/README
+++ b/電動車充電系統/README
@@ -1,5 +1,5 @@
-專題名稱：智慧停車場
-組員：資工三A 410918649 黃翊庭 資工三A 410918681 蔡尚頤 資工三A 410928131 劉智文 資工三A 410918398 陳茂華
+專題名稱：電動車充電系統
+組員：資工四A 410918649 黃翊庭 資工四A 410918681 蔡尚頤 資工四A 410928131 劉智文 資工四A 410918398 陳茂華
 指導老師姓名：張志宏老師
 會議記錄：會議記錄1、會議記錄2
 畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名  
