--- a/IPFS幣記/README
+++ b/IPFS幣記/README
@@ -1,5 +1,5 @@
 專題名稱：IPFS幣記
-組員：資工三B 410919132 林映如 資工三B 410919158 楊廷烽 資工三B 410918819 蔡侄宇 資工三B 410928149 謝孟峻
+組員：資工四B 410919132 林映如 資工四B 410919158 楊廷烽 資工四B 410918819 蔡侄宇 資工四B 410928149 謝孟峻
 指導老師姓名：謝孟諺老師
 會議記錄：111(1)專題會議記錄(一).pdf、111(1)專題會議記錄(二).pdf
 畢業專題計畫書：IPFS幣記_畢業專題計劃書.pdf
