--- a/LINE Bot 校園導覽小幫手/README
+++ b/LINE Bot 校園導覽小幫手/README
@@ -2,7 +2,7 @@
 組員：資工三A 410919140 鐘怡萱、資工三A 410919166 徐羽萱、資工三A 410918704 鄧芷允
 指導老師姓名：陸子強 老師
 會議記錄：第一次專題會議記錄、第二次專題會議記錄
-畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
+畢業專題計畫書：專題計劃書.pdf
 成果報告書：輸入成果報告書電子檔的檔名
 程式：輸入程式電子檔的檔名
 簡報：輸入介紹專題 PPT 簡報檔的檔名
