--- a/程式設計yt教學頻道網頁製作/README
+++ b/程式設計yt教學頻道網頁製作/README
@@ -5,5 +5,5 @@
 畢業專題計畫書：計劃書.pdf 121683527.doc 為計劃書的PDF跟word檔
 程式:app.zip
 海報:D02-程式設計yt教學頻道網頁
-簡報:課程設計YT教學頻道網頁ppt
-介紹影片:
+簡報:課程設計YT教學頻道網頁ppt(3)
+介紹影片:程式設計yt教學頻道網頁 介紹網頁功能-https://youtu.be/BNFgIYWRzHw
