--- a/程式設計yt教學頻道網頁製作/README
+++ b/程式設計yt教學頻道網頁製作/README
@@ -3,6 +3,7 @@
 指導老師:滕元翔
 會議記錄：專題1為第一次會議紀錄   新增專題會議紀錄2
 畢業專題計畫書：計劃書.pdf 121683527.doc 為計劃書的PDF跟word檔
+成果書: 專題規格
 程式:app.zip
 海報:D02-程式設計yt教學頻道網頁
 簡報:課程設計YT教學頻道網頁ppt(3)
