--- a/APCS網頁YT設計/README
+++ b/APCS網頁YT設計/README
@@ -1,6 +1,6 @@
 
 專題名稱：APCS網頁YT設計
-組員：資工三B 410918445張振暐、資工三B 410918322黃健豪、資工三A 410928335涂瑜峻
+組員：資工三B 410918445張振暐、資工三B 410918322黃健豪、資工三A 410928335涂瑜峻 資工四B 410918487邵振豪
 指導老師姓名：滕元翔老師  
 會議記錄：會議記錄1、會議記錄2
 畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
