--- a/網路頻道網頁設計/README
+++ b/網路頻道網頁設計/README
@@ -1,10 +1,10 @@
 專題名稱：網路頻道網頁設計
  組員：資工3B 410918542 吳崇愷 資工3B 410918877 顧至杰 資工3B 410954548 盧冠廷 資工3B 410928220 張智棋
- 指導老師姓名：騰元祥
+ 指導老師姓名：滕元祥
  會議記錄：會議記錄1.doc
  畢業專題計畫書：專題計劃書
- 成果報告書：輸入成果報告書電子檔的檔名
- 程式：輸入程式電子檔的檔名
- 簡報：輸入介紹專題 PPT 簡報檔的檔名
- 海報：輸入海報電子檔的檔名
-介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
+ 成果報告書：程式語言網頁交流平台報告書.docx
+ 程式：程式語言網頁交流平台zip
+ 簡報：程式網頁交流平台ptt.pptx
+ 海報：D25-程式語言網頁交流平台.png
+介紹影片：https://youtu.be/kiZMB58TLJE
