--- a/網路頻道網頁設計/README
+++ b/網路頻道網頁設計/README
@@ -4,7 +4,7 @@
  會議記錄：會議記錄1.doc
  畢業專題計畫書：專題計劃書
  成果報告書：程式語言網頁交流平台報告書.docx
- 程式：程式語言網頁交流平台zip
+ 程式：程式語言網頁交流平台1-4zip
  簡報：程式網頁交流平台ptt.pptx
  海報：D25-程式語言網頁交流平台.png
 介紹影片：https://youtu.be/kiZMB58TLJE
