--- a/藥物功效查詢/README
+++ b/藥物功效查詢/README
@@ -5,6 +5,6 @@ D 會議記錄：第一次專題會議記錄.docx、第二次專題會議.docx
 E 畢業專題計畫書：影像辨識企畫書.doc
 F 成果報告書：藥物功效查詢系統文件規格書v2.docx
 G 程式：藥物功效查詢.zip
-H 簡報：
+H 簡報：藥物功效查詢_專題簡報1.pptx、藥物功效查詢_專題簡報2.pptx
 I 海報：D05-藥物功效查詢
 J 介紹影片：https://www.youtube.com/watch?v=4Ykqewj72Nw\
