--- a/藥物功效查詢/README
+++ b/藥物功效查詢/README
@@ -2,8 +2,8 @@ A 專題名稱：藥物功效查詢
 B 組員：資工四B 410918990 劉釉喬、資工四B 410919035 莊育慈
 C 指導老師姓名：翁永昌
 D 會議記錄：第一次專題會議記錄.docx、第二次專題會議.docx
-E 畢業專題計畫書：影像辨識企畫書.doc
-F 成果報告書：藥物功效查詢系統文件規格書v2.docx
+E 畢業專題計畫書：
+F 成果報告書：
 G 程式：藥物功效查詢.zip
 H 簡報：藥物功效查詢_專題簡報1.pptx、藥物功效查詢_專題簡報2.pptx
 I 海報：D05-藥物功效查詢
