--- a/菜逼逼學前端/README
+++ b/菜逼逼學前端/README
@@ -1,5 +1,5 @@
  專題名稱：菜逼逼學前端
- 組員:資工三B 410918851 郭芃岑   資工三B 410921896 楊舒語    資工三B  410918568 夏湘淳
+ 組員:資工四B 410918851 郭芃岑   資工四B 410921896 楊舒語    資工四B  410918568 夏湘淳
  指導老師姓名：戴自強
  會議記錄：meetingMinute-1、meetingMinute-2
  畢業專題計畫書：專題計劃書
