--- a/藥物功效查詢/README
+++ b/藥物功效查詢/README
@@ -3,7 +3,7 @@ B 組員：資工四B 410918990 劉釉喬、資工四B 410919035 莊育慈
 C 指導老師姓名：翁永昌
 D 會議記錄：第一次專題會議記錄.docx、第二次專題會議.docx
 E 畢業專題計畫書：
-F 成果報告書：
+F 成果報告書：藥物功效查詢＿系統文件規格書.docx
 G 程式：藥物功效查詢.zip
 H 簡報：藥物功效查詢_簡報.zip
 I 海報：D05-藥物功效查詢
