--- a/菜逼逼學前端/README
+++ b/菜逼逼學前端/README
@@ -6,6 +6,6 @@
  成果報告書：輸入成果報告書電子檔的檔名
  程式：輸入程式電子檔的檔名
 
- 簡報：輸入介紹專題 PPT 簡報檔的檔名
- 海報：輸入海報電子檔的檔名
+ 簡報：菜逼逼學前端.pptx
+ 海報：菜逼逼學前端 海報.pdf
  介紹影片：https://youtu.be/dhtRIRrl0iE
