--- a/菜逼逼學前端/README
+++ b/菜逼逼學前端/README
@@ -4,7 +4,7 @@
  會議記錄：meetingMinute-1、meetingMinute-2
  畢業專題計畫書：專題計劃書
  成果報告書：輸入成果報告書電子檔的檔名
- 程式：project
+ 程式：teaching.rar
  簡報：菜逼逼學前端.pptx
  海報：菜逼逼學前端 海報.pdf
  介紹影片：https://youtu.be/dhtRIRrl0iE
