--- a/APCS網頁YT設計/README
+++ b/APCS網頁YT設計/README
@@ -3,7 +3,7 @@
 組員：資工四B 410918445張振暐、資工四B 410918322黃健豪、資工四A 410928335涂瑜峻、資工四B 410918487 邵振豪
 指導老師姓名：滕元翔老師  
 會議記錄：會議記錄1、會議記錄2
-畢業專題計畫書：畢業專題計劃書
+畢業專題計畫書：畢業專題口試系統文件規格書
 成果報告書：輸入成果報告書電子檔的檔名
 程式：程式.zip
 簡報：https://www.canva.com/design/DAFjHcdYQdY/IGqY4DJ7Awha2Pgh0MH28A/edit?utm_content=DAFjHcdYQdY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton
