--- a/影像搜尋/README
+++ b/影像搜尋/README
@@ -4,8 +4,8 @@ B.組員：資工三A、410828608、石辰栩
         資工三B、410903652、楊明耀
 C.指導老師姓名：羅峻旗老師
 D.會議記錄：第一次會議記錄.pdf、第二次會議記錄.pdf
-E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
-F.成果報告書：輸入成果報告書電子檔的檔名
+E.畢業專題計畫書：畢業專題計畫書.pdf、畢業專題計畫書.doc
+F.成果報告書：畢業專題成果報告書.pdf、畢業專題成果報告書.doc
 G.程式：graduationProject-master.zip、yolo_project_url.txt
 H.簡報：輸入介紹專題 PPT 簡報檔的檔名
 I.海報：專題海報.jpg
