--- a/影像搜尋/README
+++ b/影像搜尋/README
@@ -7,6 +7,6 @@ D.會議記錄：第一次會議記錄.pdf、第二次會議記錄.pdf
 E.畢業專題計畫書：畢業專題計畫書.pdf、畢業專題計畫書.doc
 F.成果報告書：畢業專題成果報告書.pdf、畢業專題成果報告書.doc
 G.程式：graduationProject-master.zip、yolo_project_url.txt
-H.簡報：輸入介紹專題 PPT 簡報檔的檔名
+H.簡報：專題介紹簡報.pptx
 I.海報：專題海報.jpg
 J.介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
