--- a/影像搜尋/README
+++ b/影像搜尋/README
@@ -1,7 +1,7 @@
-A.專題名稱：影像搜尋
-B.組員：資工三A、410828608、石辰栩
-        資工三B、410919077、傅詩軒
-        資工三B、410903652、楊明耀
+A.專題名稱：圖片版CTRL+F－按圖索字
+B.組員：資工四A、410828608、石辰栩
+        資工四B、410903652、楊明耀
+        資工四B、410919077、傅詩軒
 C.指導老師姓名：羅峻旗老師
 D.會議記錄：第一次會議記錄.pdf、第二次會議記錄.pdf
 E.畢業專題計畫書：畢業專題計畫書.pdf、畢業專題計畫書.doc
