--- a/基於NERF網路之無人機空拍建模/README
+++ b/基於NERF網路之無人機空拍建模/README
@@ -1,8 +1,8 @@
 專題名稱：四軸飛行器之橋樑檢測系統
 組員：
-(資工三A)(410919069)(李祐愷)
-(資工三A)(410921901)(何政樺) 
-(資工三A)(410919108)(陳聿脩)
+(資工四A)(410919069)(李祐愷)
+(資工四A)(410921901)(何政樺) 
+(資工四A)(410919108)(陳聿脩)
 指導老師姓名：蔡英德教授
 會議記錄：第一次會議記錄、第二次會議記錄
 畢業專題計畫書：專題計畫書
