--- a/EasyCar/README
+++ b/EasyCar/README
@@ -5,9 +5,9 @@
 資工三B 410981090 陳妘庭
 指導老師姓名:王耀德老師
 會議記錄:會議記錄1 、會議紀錄2
-畢業專題計畫書:
-成果報告書:
-程式:
-簡報:
-海報:
-介紹影片:
+畢業專題計畫書:專題計劃書
+成果報告書:成果報告書
+程式:easycar10
+簡報:ppt簡報
+海報:海報
+介紹影片:https://www.youtube.com/watch?v=nshby3ryads&ab_channel=Jessicu
