--- a/YOLOv7嵌入式系統加速推論/README
+++ b/YOLOv7嵌入式系統加速推論/README
@@ -3,7 +3,7 @@ B 組員：資工四B 410908903 葉睿廷
 C 指導老師姓名：翁永昌
 D 會議記錄：第一次會議記錄.docx、第二次會議紀錄.docx
 E 畢業專題計畫書：影像辨識計畫書.doc
-F 成果報告書：
+F 成果報告書：B07-專題成果報告書.docx
 G 程式：
 H 簡報：
 I 海報：B07-YOLOv7嵌入式模型推論.jpg
