--- a/人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例)/README
+++ b/人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例)/README
@@ -13,6 +13,6 @@ D.會議記錄：
 E.畢業專題計畫書：專題計劃書.pdf
 F.成果報告書：輸入成果報告書電子檔的檔名
 G.程式：系統相關程式
-H.簡報：輸入介紹專題 PPT 簡報檔的檔名
+H.簡報：畢業專題成果報告書.pdf
 I.海報：B09-人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例).jpg
 J.介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
