--- a/人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例)/README
+++ b/人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例)/README
@@ -11,7 +11,7 @@ D.會議記錄：
     第一次:111.10.18 會議記錄
     第二次:111.12.06 會議記錄
 E.畢業專題計畫書：專題計劃書.pdf
-F.成果報告書：輸入成果報告書電子檔的檔名
+F.成果報告書：畢業專題成果報告書.pdf
 G.程式：系統相關程式
 H.簡報：畢業專題成果報告書.pdf
 I.海報：B09-人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例).jpg
