--- a/AI人因工程風險危害姿態辨識系統/README
+++ b/AI人因工程風險危害姿態辨識系統/README
@@ -2,7 +2,7 @@ A.專題名稱：AI人因工程風險危害姿態辨識系統
 B.組員：資工四A 410903628 曾奕銓、資工四A 410903725 陳俞安、資工四A 410903563 呂尚哲、資工四A 410928238 柳呈諺、資工四A 410918869 徐立帆
 C.指導老師姓名：詹毓偉教授
 D.會議記錄：專題會議紀錄(一)、專題會議紀錄(二)
-E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
+E.畢業專題計畫書：資訊工程學系畢業專題計畫書.pdf
 F.成果報告書：輸入成果報告書電子檔的檔名
 G.程式：https://drive.google.com/drive/folders/1kjCDBoXXFDbebC-1PNSz7HWCpU1LTzG8?usp=drive_link
 I.簡報：輸入介紹專題 PPT 簡報檔的檔名
