--- a/AI人因工程風險危害姿態辨識系統/README
+++ b/AI人因工程風險危害姿態辨識系統/README
@@ -6,5 +6,5 @@ E.畢業專題計畫書：資訊工程學系畢業專題計畫書.pdf
 F.成果報告書：輸入成果報告書電子檔的檔名
 G.程式：https://drive.google.com/drive/folders/1kjCDBoXXFDbebC-1PNSz7HWCpU1LTzG8?usp=drive_link
 I.簡報：輸入介紹專題 PPT 簡報檔的檔名
-J.海報：輸入海報電子檔的檔名
+J.海報：B08-AI人因工程風險危害姿態辨識系統.png
 K.介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
