--- a/AI人因工程風險危害姿態辨識系統/README
+++ b/AI人因工程風險危害姿態辨識系統/README
@@ -5,6 +5,6 @@ D.會議記錄：專題會議紀錄(一)、專題會議紀錄(二)
 E.畢業專題計畫書：資訊工程學系畢業專題計畫書.pdf
 F.成果報告書：輸入成果報告書電子檔的檔名
 G.程式：https://drive.google.com/drive/folders/1kjCDBoXXFDbebC-1PNSz7HWCpU1LTzG8?usp=drive_link
-I.簡報：[AI人因工程風險危害姿態辨識系統.pptx](/AI人因工程風險危害姿態辨識系統.pptx)
+I.簡報：AI人因工程風險危害姿態辨識系統.pptx
 J.海報：B08-AI人因工程風險危害姿態辨識系統.png
 K.介紹影片：https://www.youtube.com/watch?v=X28xT5G4gKk
