--- a/校園微定位服務app/README
+++ b/校園微定位服務app/README
@@ -3,8 +3,8 @@
 指導老師姓名：蔡英德老師
 會議記錄：
 畢業專題計畫書：企劃書
-成果報告書：
-程式：
-簡報：
-海報：
+成果報告書：專題成果報告
+程式：AndroidStudio_WeeeApp2, JavaSpring_demo1
+簡報：校園微定位服務_v2
+海報：C26-校內微定位服務App
 介紹影片：
