--- a/YOLOv7嵌入式系統加速推論/README
+++ b/YOLOv7嵌入式系統加速推論/README
@@ -6,6 +6,6 @@ E 畢業專題計畫書：影像辨識計畫書.doc
 F 成果報告書：B07-專題成果報告書.docx
 G 程式：onnx_nndct.zip
        utils.zip
-H 簡報：
+H 簡報：畢展簡報 B07.pptx
 I 海報：B07-YOLOv7嵌入式模型推論.jpg
 J 介紹影片：
