--- a/物聯網安全防護/README
+++ b/物聯網安全防護/README
@@ -4,7 +4,7 @@
 會議記錄：第一次專題會議紀錄、第二次專題會議紀錄
 畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名  
 成果報告書：輸入成果報告書電子檔的檔名  
-程式：輸入程式電子檔的檔名 P.4  
+程式：lab515-command-example.zip
 簡報：輸入介紹專題 PPT 簡報檔的檔名  
 海報：輸入海報電子檔的檔名  
 介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
