--- a/物聯網安全防護/README
+++ b/物聯網安全防護/README
@@ -7,4 +7,4 @@
 程式：lab515-command-example.zip
 簡報：輸入介紹專題 PPT 簡報檔的檔名  
 海報：海報.jpg
-介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
+介紹影片：https://youtu.be/GA3WAJN9_-E
