--- a/應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用/README
+++ b/應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用/README
@@ -1,10 +1,10 @@
 A.專題名稱：應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用
-B.組員：資工三A 410928173 黃凱軒 資工三A 410918908 陳柏諺  資工三A  顏仁炫 410903660 資工三A張瑞蘢 410928270  資工三A 陳家禾 410919182
+B.組員：資工四A 410928173 黃凱軒 資工四A 410918908 陳柏諺  資工四A 顏仁炫 410903660 資工四A 張瑞蘢 410928270  資工四A 陳家禾 410919182
 C.指導老師姓名：詹毓偉
 D.會議記錄：專題會議記錄(一).pdf、專題會議記錄(二).pdf
-E.畢業專題計畫書：專題計劃書.
-F.成果報告書：輸入成果報告書電子檔的檔名
-G.程式：輸入程式電子檔的檔名
-H.簡報：輸入介紹專題 PPT 簡報檔的檔名
-I.海報：輸入海報電子檔的檔名
-介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
+E.畢業專題計畫書：畢業專題計畫書_應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用.pdf
+F.成果報告書：成果報告書_應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用.pdf
+G.程式：https://github.com/Raze03660/CPR_Project
+H.簡報：專題介紹(詳細版).pdf、專題介紹(影片之簡潔版).pdf
+I.海報：海報_應用AI動作姿態辨識技術於CPR訓練輔助系統之開發與應用.png
+介紹影片：https://www.youtube.com/watch?v=BY0N9_9k0LA
