--- a/人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例)/README
+++ b/人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例)/README
@@ -13,6 +13,6 @@ D.會議記錄：
 E.畢業專題計畫書：專題計劃書.pdf
 F.成果報告書：畢業專題成果報告書.pdf
 G.程式：系統相關程式
-H.簡報：人工智慧FPGA邊緣運算系統.pptx
+H.簡報：人工智慧FPGA邊緣運算系統.pdf
 I.海報：B09-人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例).jpg
 J.介紹影片： <https://www.youtube.com/watch?v=WWPBoqfrrpA>
