--- a/智慧導引推車/README
+++ b/智慧導引推車/README
@@ -1,4 +1,4 @@
-A.專題名稱：智慧導引推車
+A.專題名稱：基於藝術品辨識的​室內定位系統(原:​智慧導引推車)
 B.組員：
 資工三A 410918550 林宣宏
 資工三A 410919027 蔡侑典
@@ -10,5 +10,5 @@ E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
 D.成果報告書：輸入成果報告書電子檔的檔名 
 E.程式：輸入程式電子檔的檔名 
 F.簡報：輸入介紹專題PPT簡報檔的檔名 
-G.海報：輸入海報電子檔的檔名 
-H.介紹影片：輸入3~5 分鐘專題介紹影片的 YouTube link 網址
+G.海報：B14-基於藝術品辨識的室內定位系統.jpg
+H.介紹影片：https://youtu.be/aIfP2s8kTPE
