--- a/智慧導引推車/README
+++ b/智慧導引推車/README
@@ -6,9 +6,9 @@ B.組員：
 資工三A 410918453 江俊頡
 C.指導老師姓名：林浩仁老師
 D.兩次會議紀錄：畢業專題會議記錄1.pdf,畢業專題會議記錄2.pdf
-E.畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名 
+E.畢業專題計畫書：專題計劃書.docx
 D.成果報告書：輸入成果報告書電子檔的檔名 
 E.程式：app.zip.001,app.zip.002,app.zip.003
-F.簡報：輸入介紹專題PPT簡報檔的檔名 
+F.簡報：專題簡報.pptx
 G.海報：B14-基於藝術品辨識的室內定位系統.jpg
 H.介紹影片：https://youtu.be/aIfP2s8kTPE
