--- a/智慧導引推車/README
+++ b/智慧導引推車/README
@@ -7,7 +7,7 @@ B.組員：
 C.指導老師姓名：林浩仁老師
 D.兩次會議紀錄：畢業專題會議記錄1.pdf,畢業專題會議記錄2.pdf
 E.畢業專題計畫書：專題計劃書.docx
-D.成果報告書：輸入成果報告書電子檔的檔名 
+D.成果報告書：專題成果報告書.pdf
 E.程式：app.zip.001,app.zip.002,app.zip.003
 F.簡報：專題簡報.pptx
 G.海報：B14-基於藝術品辨識的室內定位系統.jpg
