--- a/連通網路數位內容教育遊戲 軟體/README
+++ b/連通網路數位內容教育遊戲 軟體/README
@@ -2,7 +2,7 @@
  組員：資工三A 410918592 林健源 資工三A 410918372 曹嘉元 資工三A 410918479 李博中 資工三A 410918518 許秉翔
  指導老師:滕元翔
  會議記:會1 會2
- 畢業專題計畫書：輸名
+ 畢業專題計畫書：專題企畫書
  成果報告書：成果報告書
  程式：GPTS
  簡報：連通網路數位內容教育遊戲
