--- a/智慧導引推車/README
+++ b/智慧導引推車/README
@@ -11,4 +11,4 @@ D.成果報告書：成果報告書.pdf
 E.程式：app.zip.001,app.zip.002,app.zip.003
 F.簡報：專題簡報.pptx
 G.海報：B14-基於藝術品辨識的室內定位系統.jpg
-H.介紹影片：https://youtu.be/aIfP2s8kTPE
+H.介紹影片：https://youtu.be/y1sFDb90gbw
