--- a/心跳檢測/README
+++ b/心跳檢測/README
@@ -4,7 +4,7 @@
 會議記錄：會議記錄1，會議紀錄2
 畢業專題計畫書：專題企畫書
 成果報告書：心跳檢測成果書.pdf
-程式：心跳檢測.zip
+程式：myheartbeat.zip
 介紹PPT:心跳檢測APP
 海報:B18-心跳檢測
 介紹影片:https://youtu.be/2Ii6Nu_-cqA
