--- a/心跳檢測/README
+++ b/心跳檢測/README
@@ -2,8 +2,7 @@
 組員：資工四A 410918411 黃宇萱
 指導老師姓名：方百立
 會議記錄：會議記錄1，會議紀錄2
-畢業專題計畫書：專題企畫書
-成果報告書：心跳檢測成果書.pdf
+畢業專題計畫書：心跳檢測成果書.pdf
 程式：myheartbeat.zip
 介紹PPT:心跳檢測APP
 海報:B18-心跳檢測
