--- a/歐得付/README
+++ b/歐得付/README
@@ -11,5 +11,5 @@ E.畢業專題計畫書：專題計畫書
 D.成果報告書：成果報告書
 E.程式：project-main
 F.簡報：歐得付點餐系統
-G.海報：輸入海報電子檔的檔名
+G.海報：C05_歐得付點餐系統
 H.介紹影片：輸入3~5 分鐘專題介紹影片的 YouTube link 網址
