--- a/歐得付/README
+++ b/歐得付/README
@@ -1,13 +1,15 @@
 A.專題名稱：歐得付
 B.組員：班級、學號、姓名
-  資工三B 410918916 葉佩諭
+  資工四B 410918916 葉佩諭
          410918712 袁翠涓
          410919051 許慈嵐
+         410918835 蔡慈翊
+  化科四B 410906278 陳妤瑄
 C.指導老師姓名：滕元翔老師
 D.两次會議紀錄：輸入兩個會議紀錄電子檔的檔名
 E.畢業專題計畫書：專題計畫書
-D.成果報告書：輸入成果報告書電子檔的檔名
-E.程式：輸入程式電孑檔的檔名
-F.簡報：輸入介紹專題PPT簡報檔的檔名
-G.海報：輸入海報電子檔的檔名
+D.成果報告書：成果報告書
+E.程式：project-main
+F.簡報：歐得付點餐系統
+G.海報：C05_歐得付點餐系統
 H.介紹影片：輸入3~5 分鐘專題介紹影片的 YouTube link 網址
