--- a/APCS網頁YT設計/README
+++ b/APCS網頁YT設計/README
@@ -8,4 +8,4 @@
 程式：程式.zip
 簡報：https://www.canva.com/design/DAFjHcdYQdY/IGqY4DJ7Awha2Pgh0MH28A/edit?utm_content=DAFjHcdYQdY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton
 海報：apcs
-介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
+介紹影片：https://youtu.be/nM2X2h2Pj68
