--- a/家庭聯絡簿APP(2)/README
+++ b/家庭聯絡簿APP(2)/README
@@ -7,8 +7,8 @@ B.組員： 資工三B  410918893 李羿璍
 C.指導老師姓名：滕元翔老師
 D.會議記錄：第一次會議記錄.pdf、第二次會議記錄.pdf
 E.畢業專題計畫書：畢業專題企劃書
-F.成果報告書：輸入成果報告書電子檔的檔名
-G.程式：輸入程式電子檔的檔名
-H.簡報：輸入介紹專題 PPT 簡報檔的檔名
-I.海報：輸入海報電子檔的檔名
-J.介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
+F.成果報告書：規格書.pdf
+G.程式：HomeApp.zip
+H.簡報：專題簡報.pptx
+I.海報：海報.png
+J.介紹影片：https://youtu.be/tJhPBJp3Un0?si=FC8SJ7S5sJjpFOnS
