--- a/YOLOv7嵌入式系統加速推論/README
+++ b/YOLOv7嵌入式系統加速推論/README
@@ -8,4 +8,4 @@ G 程式：onnx_nndct.zip
        utils.zip
 H 簡報：畢展簡報 B07.pptx
 I 海報：B07-YOLOv7嵌入式模型推論.jpg
-J 介紹影片：
+J 介紹影片：https://youtu.be/YCEWFSTGBt4?si=5wn2kWzJAZ1PovVN
