--- a/PU資工系小幫手/README
+++ b/PU資工系小幫手/README
@@ -7,4 +7,4 @@
 程式：程式碼
 簡報：PU資工系小幫手簡報
 海報：PU資工系小幫手海報
-Youtube+ : https://youtu.be/TMDlU6Fc0Mg?si=-AZDOAFUnl5ao9po
+Youtube : https://youtu.be/TMDlU6Fc0Mg?si=-AZDOAFUnl5ao9po
