--- a/物聯網安全防護/README
+++ b/物聯網安全防護/README
@@ -1,5 +1,5 @@
 專題名稱：物聯網安全防護
-組員：資工三B 410903678 呂俊勳 資工三B 410903610 廖仕玄 資工三B 410918770 黃瀧平 資工三B 410918796 葉柏佑
+組員：資工四B 410903678 呂俊勳 資工四B 410903610 廖仕玄 資工四B 410918770 黃瀧平 資工四B 410918796 葉柏佑
 指導老師姓名：蔡英德老師
 會議記錄：第一次專題會議紀錄、第二次專題會議紀錄
 畢業專題計畫書： 
