--- a/物聯網安全防護/README
+++ b/物聯網安全防護/README
@@ -7,5 +7,5 @@
 程式：lab515-command-example.zip
 簡報：專題簡報檔.pdf
 海報：海報.jpg
-介紹影片：https://youtu.be/GA3WAJN9_-E
+介紹影片：https://www.youtube.com/watch?v=_7enxvwRejg
 
