--- a/Android記帳APP開發/README
+++ b/Android記帳APP開發/README
@@ -1,5 +1,5 @@
 專題名稱：Android記帳APP開發
-組員：410918940 鄒翔同  410918534 楊翔宇 410918330 劉家軒
+組員：資工四A 410918940 鄒翔同  資工四A 410918534 楊翔宇 資工四A 410918330 劉家軒
 指導老師姓名：滕元翔老師
 會議記錄：會議記錄1、會議記錄2
 畢業專題計畫書：計畫書
