--- a/人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例)/README
+++ b/人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例)/README
@@ -1,11 +1,11 @@
 A.專題名稱：人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例)
 B.組員：
-    資工三A 410921888 王昱閎
-    資工三A 410919085 陳鏈翔
-    資工三B 410928204 許嘉顯
-    資工三B 410919019 何奐文
-    資工三B 410918380 蒙羿辰
-    資工三B 410928246 李以崴
+    資工四A 410921888 王昱閎
+    資工四A 410919085 陳鏈翔
+    資工四B 410928204 許嘉顯
+    資工四B 410919019 何奐文
+    資工四B 410918380 蒙羿辰
+    資工四B 410928246 李以崴
 C.指導老師姓名：林浩仁老師、陸子強老師
 D.會議記錄：
     第一次:111.10.18 會議記錄
