--- a/家庭聯絡簿APP(2)/README
+++ b/家庭聯絡簿APP(2)/README
@@ -1,9 +1,9 @@
 A.專題名稱：家庭聯絡簿APP
-B.組員： 資工三B  410918893 李羿璍
-        資工三B  410918958 李啟禎 
-        資工三B  410928262 陳柏穎
-        資工三B  410950463 黃鉑荏
-        資工三B  410903597 陳禹丞
+B.組員： 資工四B  410918893 李羿璍
+        資工四B  410918958 李啟禎 
+        資工四B  410928262 陳柏穎
+        資工四B  410950463 黃鉑荏
+        資工四B  410903597 陳禹丞
 C.指導老師姓名：滕元翔老師
 D.會議記錄：第一次會議記錄.pdf、第二次會議記錄.pdf
 E.畢業專題計畫書：畢業專題企劃書
