--- a/智慧導引推車/README
+++ b/智慧導引推車/README
@@ -1,9 +1,9 @@
 A.專題名稱：基於藝術品辨識的​室內定位系統(原:​智慧導引推車)
 B.組員：
-資工三A 410918550 林宣宏
-資工三A 410919027 蔡侑典
-資工三A 410918356 易弘翔
-資工三A 410918453 江俊頡
+資工四A 410918550 林宣宏
+資工四A 410919027 蔡侑典
+資工四A 410918356 易弘翔
+資工四A 410918453 江俊頡
 C.指導老師姓名：林浩仁老師
 D.兩次會議紀錄：畢業專題會議記錄1.pdf,畢業專題會議記錄2.pdf
 E.畢業專題計畫書：專題計劃書.docx
