--- a/心跳檢測/README
+++ b/心跳檢測/README
@@ -3,8 +3,8 @@
 指導老師姓名：方百立
 會議記錄：會議記錄1，會議紀錄2
 畢業專題計畫書：專題計畫書.pdf
-畢業專題成果書：心跳檢測成果書.pdf
-程式：myheartbeat.zip
-介紹PPT:心跳檢測APP
-海報:B18-心跳檢測
+畢業專題成果書：心跳檢測成果書2.pdf
+程式：myheartbeat2.zip
+介紹PPT:心跳檢測2.pptx
+海報:心跳檢測.jpg
 介紹影片:https://youtu.be/2Ii6Nu_-cqA
