--- a/智慧拐杖/README
+++ b/智慧拐杖/README
@@ -1,10 +1,10 @@
 專題名稱：智慧拐杖
-組員：資工三B 410907452 李元喬 資工三A 410954522 鄭廷劭 資工三A 410954629 尹心宏 資工三B 410900612 葉韋辰
-指導老師姓名：藤元翔老師
-會議記錄：會議記錄1、會議記錄2
-畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名  
-成果報告書：輸入成果報告書電子檔的檔名  
-程式：輸入程式電子檔的檔名
-簡報：輸入介紹專題 PPT 簡報檔的檔名  
-海報：輸入海報電子檔的檔名  
-介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
+組員：資工四B 410907452 李元喬 資工四A 410954522 鄭廷劭 資工四A 410954629 尹心宏 資工四B 410900612 葉韋辰
+指導老師姓名：滕元翔老師
+會議記錄：會議記錄1.docx、會議記錄2.docx
+畢業專題計畫書：畢業專題企畫書.docx  
+成果報告書：  
+程式：專題.txt
+簡報：  
+海報：智能拐杖.jpg  
+介紹影片：
