--- a/智慧水保全/README
+++ b/智慧水保全/README
@@ -1,5 +1,5 @@
 A.專題名稱：智慧水保全
-B.組員：資工三B林威 410903717 資工三B 林冠煒 410918607 資工三B 謝明志 410919174  資工三B 吳劭揚 410918429
+B.組員：資工四B林威 410903717 資工四B 林冠煒 410918607 資工四B 謝明志 410919174  資工四B 吳劭揚 410918429
 C.指導老師姓名：戴自強老師 
 D.兩次會議紀錄：智慧水保全第1次會議紀錄、智慧水保全第2次會議紀錄
 E.畢業專題計畫書：智慧水保全畢業專題計畫書
