--- a/智慧藥盒與用藥提醒/README
+++ b/智慧藥盒與用藥提醒/README
@@ -1,1 +1,18 @@
-
+A.專題名稱：人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例)
+B.組員：
+    資工四A 410921888 王昱閎
+    資工四A 410919085 陳鏈翔
+    資工四B 410928204 許嘉顯
+    資工四B 410919019 何奐文
+    資工四B 410918380 蒙羿辰
+    資工四B 410928246 李以崴
+C.指導老師姓名：林浩仁老師、陸子強老師
+D.會議記錄：
+    第一次:111.10.18 會議記錄
+    第二次:111.12.06 會議記錄
+E.畢業專題計畫書：專題計劃書.pdf
+F.成果報告書：畢業專題成果報告書.pdf
+G.程式：系統相關程式
+H.簡報：人工智慧FPGA邊緣運算系統.pdf
+I.海報：B09-人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例).jpg
+J.介紹影片： <https://www.youtube.com/watch?v=WWPBoqfrrpA>
