--- a/智慧藥盒與用藥提醒/README
+++ b/智慧藥盒與用藥提醒/README
@@ -1,13 +1,11 @@
 A.專題名稱：智慧藥盒與用藥提醒
 B.組員：
  資工四 B410954297 宋彥霖、曾子宇
-C.指導老師姓名：林浩仁老師、陸子強老師
-D.會議記錄：
-    第一次:111.10.18 會議記錄
-    第二次:111.12.06 會議記錄
-E.畢業專題計畫書：專題計劃書.pdf
-F.成果報告書：畢業專題成果報告書.pdf
+C.指導老師姓名：張志宏老師
+D.會議記錄：專題會議1.docx、專題會議2.docx    
+E.畢業專題計畫書：畢業專題計劃書.pdf
+F.成果報告書：成果報告書.pdf
 G.程式：系統相關程式
-H.簡報：人工智慧FPGA邊緣運算系統.pdf
+H.簡報：A4.pdf
 I.海報：B09-人工智慧FPGA邊緣運算系統 (以瑕疵辨識為例).jpg
 J.介紹影片： <https://www.youtube.com/watch?v=WWPBoqfrrpA>
