--- a/家庭聯絡簿APP(一)/README
+++ b/家庭聯絡簿APP(一)/README
@@ -1,10 +1,10 @@
 A.專題名稱：家庭聯絡簿APP(一)
-B.組員：資工三B-410918348-賴聖祐   資工三B-410918699-陳則諭    資工三B-410918673-曾楷閔
+B.組員：資工四B-410918348-賴聖祐   資工四B-410918699-陳則諭    資工四B-410918673-曾楷閔
 C.指導老師姓名：滕元翔
 D.會議記錄：會議紀錄1.pdf、會議紀錄2.pdf
 E.畢業專題計畫書：畢業專題計劃書.pdf
-F.成果報告書：
-G.程式：
-H.簡報：
-I.海報：
-J.介紹影片：
+F.成果報告書：成果報告書.pptx
+G.程式：contactbook.zip
+H.簡報：介紹專題.pptx
+I.海報：C04家庭聯絡簿APP.jpg
+J.介紹影片：家庭聯絡簿APP網址.txt
