--- a/網路頻道網頁設計/README
+++ b/網路頻道網頁設計/README
@@ -1,5 +1,5 @@
 專題名稱：程式語言網頁交流平台
- 組員：資工4B 410918542 吳崇愷 資工4B 410918877 顧至杰 資工4B 410954548 盧冠廷 資工4B 410928220 張智棋 資工4b廖御崴
+ 組員：資工4B 410918542 吳崇愷 資工4B 410918877 顧至杰 資工4B 410954548 盧冠廷 資工4B 410928220 張智棋 資工4b 410919093廖御崴
  指導老師姓名：滕元祥
  會議記錄：會議記錄1.doc
  畢業專題計畫書：專題計劃書
