--- a/連通網路數位內容教育遊戲 軟體/README
+++ b/連通網路數位內容教育遊戲 軟體/README
@@ -1,5 +1,5 @@
 專題名稱：連通網路數位內容教育遊戲 軟體
- 組員：資工三A 410918592 林健源 資工三A 410918372 曹嘉元 資工三A 410918479 李博中 資工三A 410918518 許秉翔
+ 組員：資工四A 410918592 林健源 資工四A 410918372 曹嘉元 資工四A 410918479 李博中 資工四A 410918518 許秉翔
  指導老師:滕元翔
  會議記:會1 會2
  畢業專題計畫書：專題企畫書
