--- a/無人車自動煞車系統/README
+++ b/無人車自動煞車系統/README
@@ -1,5 +1,5 @@
-專題名稱：無人車自動煞車系統
-組員：資工三A 410919001 張譽嚴同學、資工三A 410918665陳揆明同學、資工三A 410954653房昀楷同學、資工三A 410918746卓家銘同學、資工三A 410918615黃浩瑜同學、資工三A 410921927蔡昀佐同學
+專題名稱：仿人為操作的AI循跡車(原：無人車自動煞車系統)
+組員：資工四A 410919001 張譽嚴同學、資工四A 410918665陳揆明同學、資工四A 410954653房昀楷同學、資工四A 410918746卓家銘同學、資工四A 410918615黃浩瑜同學、資工三A 410921927蔡昀佐同學
 指導老師姓名：陸子強老師
 會議記錄：會議記錄1、會議記錄2
 畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
