--- a/程式設計yt教學頻道網頁製作/README
+++ b/程式設計yt教學頻道網頁製作/README
@@ -1,5 +1,5 @@
 專題名稱:程式設計yt教學頻道網頁製作
-組員: 資工四B  候昱翔410918657 李棋榕410918500 宋竑旻410918461
+組員: 資工四B  候昱翔410918657 李棋榕410918500 宋竑旻410918461  張瑋哲410918754  李欣庭410918738
 指導老師:滕元翔
 會議記錄：專題1為第一次會議紀錄   新增專題會議紀錄2
 畢業專題計畫書：計劃書.pdf 121683527.doc 為計劃書的PDF跟word檔
