--- a/EasyCar/README
+++ b/EasyCar/README
@@ -1,15 +1,15 @@
 專題名稱:EasyCar
 組員:
-資工三B 410954475 張芸瑛
-資工三B 410954483 蘇榆婷
-資工三B 410981090 陳妘庭
+資工四B 410954475 張芸瑛
+資工四B 410954483 蘇榆婷
+
 指導老師姓名:王耀德老師
 會議記錄:會議記錄1 、會議紀錄2
 
 畢業專題計畫書:專題計劃書
-成果報告書:成果報告書
-程式:easycar10
-簡報:ppt簡報
-海報:海報
+成果報告書:easycar成果報告書.pdf
+程式:easycar10.zip
+簡報:PPT.pptx
+海報:海報.jpg
 介紹影片:https://www.youtube.com/watch?v=nshby3ryads&ab_channel=Jessicu
 
