--- a/無人車自動煞車系統/README
+++ b/無人車自動煞車系統/README
@@ -5,6 +5,6 @@
 畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
 成果報告書：輸入成果報告書電子檔的檔名
 程式：輸入程式電子檔的檔名
-簡報：輸入介紹專題 PPT 簡報檔的檔名
+簡報：仿人為操作的AI循跡車報告書.pptx
 海報：輸入海報電子檔的檔名
 介紹影片：輸入 3~5 分鐘專題介紹影片的 YouTube link 網址
