--- a/無人車自動煞車系統/README
+++ b/無人車自動煞車系統/README
@@ -3,7 +3,7 @@
 指導老師姓名：陸子強老師
 會議記錄：會議記錄1、會議記錄2
 畢業專題計畫書：輸入畢業專題計畫書電子檔的檔名
-成果報告書：輸入成果報告書電子檔的檔名
+成果報告書：仿人為操作的AI循跡車報告書.pptx
 程式：輸入程式電子檔的檔名
 簡報：仿人為操作的AI循跡車報告書.pptx
 海報：輸入海報電子檔的檔名
